fix mobile overflow

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -50,7 +50,7 @@ html {
 	font-family:	UEFAEuro, Helvetica Neue, Helvetica, Arial, sans-serif;
 	-webkit-overflow-scrolling: touch;
 	overflow-x: hidden;
-	overflow-x: visible;
+	overflow-y: visible;
 
 	::-webkit-scrollbar {
 			width: 5px;
